[PPANTT-191] fix
